[package]
name = "dota2rs"
version = "0.1.0"
authors = ["Maverick Kaung <mavjs01@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.44"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
